New Crowdin updates (#12593)
* New translations: site.xml (Latvian)

* New translations: site.xml (Portuguese, Brazilian)

* New translations: site.xml (Dutch)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Arabic)

* New translations: site.xml (Danish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Ukrainian)

* New translations: site.xml (Polish)

* New translations: site.xml (French)

* New translations: site.xml (Spanish)

* New translations: site.xml (Catalan)

* New translations: site.xml (German)

* New translations: site.xml (Armenian)

* New translations: site.xml (Italian)

* New translations: site.xml (Japanese)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Portuguese)

* New translations: site.xml (Russian)

* New translations: site.xml (Slovak)

* New translations: site.xml (Slovenian)

* New translations: site.xml (Portuguese, Brazilian)

* New translations: site.xml (Norwegian Nynorsk)

* New translations: site.xml (Latvian)

* New translations: site.xml (English, United States)

* New translations: site.xml (Bosnian)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Swedish)

* New translations: site.xml (Polish)

* New translations: site.xml (Hungarian)

* New translations: site.xml (Armenian)

* New translations: site.xml (Italian)

* New translations: site.xml (Portuguese)

* New translations: site.xml (English, United States)

* New translations: site.xml (Esperanto)

* New translations: puzzle.xml (Spanish)

* New translations: puzzle.xml (Hebrew)

* New translations: faq.xml (Hungarian)

* New translations: puzzle.xml (Italian)

* New translations: puzzle.xml (Polish)

* New translations: puzzle.xml (Portuguese)

* New translations: puzzle.xml (Slovak)

* New translations: puzzle.xml (Slovenian)

* New translations: puzzle.xml (English, United States)

* New tra

--- a/translation/dest/site/fr-FR.xml
+++ b/translation/dest/site/fr-FR.xml
@@ -662,8 +662,8 @@
   <string name="simulClockHint">Configuration de la cadence Fischer. Plus il y a d\'adversaires, plus vous pourriez avoir besoin de temps.</string>
   <string name="simulAddExtraTime">Vous pouvez ajouter du temps supplémentaire à votre pendule pour gérer la simultanée.</string>
   <string name="simulHostExtraTime">Temps supplémentaire de l\'hôte</string>
-  <string name="simulAddExtraTimePerPlayer">Ajouter le temps initial à votre horloge pour chaque joueur participant à la simultanée.</string>
-  <string name="simulHostExtraTimePerPlayer" comment="simulHostExtraTimePerPlayer&#10;&#10;Add more time to the simul host's clock for each player joining the simul.">Temps additionnel par joueur ajouté à l\'horloge de l\'hôte</string>
+  <string name="simulAddExtraTimePerPlayer">Ajouter le temps initial à votre horloge pour chaque joueur participant à la simultanée</string>
+  <string name="simulHostExtraTimePerPlayer">Temps additionnel ajouté à l\'horloge de l\'hôte pour chaque joueur</string>
   <string name="lichessTournaments">Tournois Lichess</string>
   <string name="tournamentFAQ">FAQ des tournois</string>
   <string name="timeBeforeTournamentStarts">Temps restant avant le début du tournoi</string>
@@ -948,4 +948,5 @@ Laissez vide pour commencer les parties à partir de la position initiale normal
   <string name="lichessDbExplanation">Échantillon de parties classées jouées par les joueurs de Lichess</string>
   <string name="switchSides">Changer de couleur</string>
   <string name="closingAccountWithdrawAppeal">Fermer votre compte annulera votre appel</string>
+  <string name="ourEventTips">Nos conseils pour l\'organisation d\'événements</string>
 </resources>
