--- a/translation/dest/site/pt-PT.xml
+++ b/translation/dest/site/pt-PT.xml
@@ -664,7 +664,7 @@ análise de computador, sala de chat do jogo e link de partilha.</string>
   <string name="simulAddExtraTime">Podes acrescentar tempo adicional ao teu relógio, para te ajudar a lidar com a simultânea.</string>
   <string name="simulHostExtraTime">Tempo adicional do anfitrião</string>
   <string name="simulAddExtraTimePerPlayer">Adicione tempo inicial ao seu relógio para cada jogador que entra na simulação.</string>
-  <string name="simulHostExtraTimePerPlayer" comment="simulHostExtraTimePerPlayer&#10;&#10;Add more time to the simul host's clock for each player joining the simul.">Tempo extra de relógio por jogador</string>
+  <string name="simulHostExtraTimePerPlayer">Tempo extra de relógio por jogador</string>
   <string name="lichessTournaments">Torneios do Lichess</string>
   <string name="tournamentFAQ">Perguntas frequentes sobre torneios em arena</string>
   <string name="timeBeforeTournamentStarts">Contagem decrescente para o início do torneio</string>
@@ -949,4 +949,5 @@ Deixe em branco para iniciar jogos da posição inicial normal.</string>
   <string name="lichessDbExplanation">Jogos avaliados por amostragem de todos os jogadores Lichess</string>
   <string name="switchSides">Trocar de lado</string>
   <string name="closingAccountWithdrawAppeal">Encerrar a sua conta anulará o seu apelo</string>
+  <string name="ourEventTips">Os nossos conselhos para organizar eventos</string>
 </resources>
