--- a/translation/dest/puzzle/ja-JP.xml
+++ b/translation/dest/puzzle/ja-JP.xml
@@ -28,6 +28,11 @@
   <string name="keepGoing">続ける…</string>
   <string name="puzzleSuccess">成功！</string>
   <string name="puzzleComplete">問題終了！</string>
+  <string name="byOpenings">オープニング別</string>
+  <string name="puzzlesByOpenings">オープニング別の問題</string>
+  <string name="openingsYouPlayedTheMost">レート戦でもっともよく使ったオープニング</string>
+  <string name="useFindInPage">ブラウザのページ内検索（Ctrl+F）を使えばお好きなオープニングが探せます。</string>
+  <string name="useCtrlF">Ctrl+F を使えばお好きなオープニングが探せます。</string>
   <string name="notTheMove">その手は違います！</string>
   <string name="trySomethingElse">別の手をどうぞ。</string>
   <string name="ratingX">レーティング: %s</string>
