--- a/translation/dest/site/ry-UA.xml
+++ b/translation/dest/site/ry-UA.xml
@@ -30,6 +30,7 @@
   <string name="kingInTheCenter">Король у центрі</string>
   <string name="threeChecks">Три шаха</string>
   <string name="raceFinished">Перебіг ся кончив</string>
+  <string name="variantEnding">Бавка кончила ся</string>
   <string name="newOpponent">Новый противник</string>
   <string name="yourOpponentWantsToPlayANewGameWithYou">Противник хоче бавити из вами щи раз</string>
   <string name="joinTheGame">Прикапчати ся од бавцї</string>
@@ -61,13 +62,31 @@
   <string name="loadingEngine">Наладованя пущача...</string>
   <string name="calculatingMoves">Зрахованя ходув...</string>
   <string name="engineFailed">Хыба ладованя пущача</string>
+  <string name="cloudAnalysis">Хмаровый аналіз</string>
+  <string name="goDeeper">Май глубше</string>
+  <string name="showThreat">Указати угрозу</string>
+  <string name="inLocalBrowser">у браузерови</string>
+  <string name="toggleLocalEvaluation">Уключити локалный аналіз</string>
+  <string name="promoteVariation">Учинити варіант майважным</string>
+  <string name="makeMainLine">Учинити варіант главным</string>
+  <string name="deleteFromHere">Забрати удсідь</string>
+  <string name="forceVariation">Учинити варіантом</string>
   <string name="move">Ход</string>
+  <string name="variantLoss">Ход, што прыйграє</string>
+  <string name="variantWin">Ход, што уграє</string>
+  <string name="insufficientMaterial">Не устачат матеріалу для мата</string>
+  <string name="pawnMove">Ход пішака</string>
   <string name="capture">Взятя</string>
   <string name="close">Закрыти</string>
   <string name="winning">Угравут</string>
   <string name="losing">Прыйгравут</string>
   <string name="drawn">Ремізова сітуація</string>
   <string name="unknown">Незнамо</string>
+  <string name="database">Зберька ходув</string>
+  <string name="openings">Дебюты</string>
+  <string name="openingExplorer">Зберька дебютув</string>
+  <string name="openingEndgameExplorer">Дебютна/ендшпільова зберька</string>
+  <string name="unknownDueToRounding">Уграш/прыйграш бізувный лем тоды, коли мусайна поступность ходув была довершена из момента послїднього взятя фіґуры вадь хода пішака позад можного кругленя значень DTZ у базах Syzygy.</string>
   <string name="delete">Стерти</string>
   <string name="byCPL">По страченым воякам</string>
   <string name="enable">Уключити</string>
@@ -112,8 +131,17 @@
   <string name="time">Час</string>
   <string name="rating">Рейтінґ</string>
   <string name="changeUsernameDescription">Перемінити своє имня. Мож учинити лем раз, при тум перемінити мож лем реґістр.</string>
+  <string name="signupUsernameHint">Пересвідчіт ся ож убрали сьте статочноє имня. Вы не зможете перемінити го пак ай вшыткі акаунты из провокативными именами будут закрыті!</string>
   <string name="email">Електрона почта</string>
+  <string name="error.weakPassword">Сися парола дуже легка, ї дуже просто угадати.</string>
   <string name="blankedPassword">Вы хосновали таку паролу на другому сайтови, из того сайту ся стало протїканя інформації. Обы обеспечити безопасность свого Lichess акаунту, захоснуйте другу паролу. Дякуєме за розуміня.</string>
+  <string name="neverTypeYourPassword">Ниґда не уводьте свою паролу Lichess дись инде!</string>
+  <string name="passwordSuggestion">Не кладіт паролу, котру вам посочили другі люди, они можут украсти ваш акаунт.</string>
+  <string name="emailSuggestion">Не кладіт почту, котру вам посочили другі люди, они можут украсти ваш акаунт.</string>
+  <string name="emailConfirmNotReceived">Не прийшло вам письмо на почту пусля реґістрації?</string>
+  <string name="usernameCanBeUsedForNewAccount">Можете хосновати се имня для нового акаунту</string>
+  <string name="checkSpamFolder">Такой перевірте фасціклу из спамом, письмо може быти там. Кідь там, укажіт го ги не спам.</string>
+  <string name="emailForSignupHelp">Кідь нич не заробило, заженіт нам се письмо:</string>
   <string name="rank">Ранґ</string>
   <string name="cancel">Одмінити</string>
   <string name="accept">Прияти</string>
@@ -143,11 +171,14 @@
     <item quantity="few">%s ремізы</item>
     <item quantity="other">%s реміз</item>
   </plurals>
+  <string name="thisAccountViolatedTos">Сись бавляч нарушив правила хоснованя Lichess</string>
   <string name="siteDescription">Задарні онлайн шахматы. Бавте у шахматы такой тепирь у легкому інтерфейсови без рекламы. Не треба реґістрації тай стерьханя проґрамы. Бавте против компютора, цімборами вадь трафными противниками.</string>
   <string name="reset">Зверичи</string>
   <string name="apply">Усокотити</string>
   <string name="save">Усокотити</string>
   <string name="toStudy">Штудія</string>
+  <string name="importGameExplanation">Вкладіт бавку у форматови PGN, и будете мати можность перегравати бавку, довершовати компюторный аналіз, приказовати у четови ай дїлити ся одкликованьом на ниї.</string>
+  <string name="clickOnTheBoardToMakeYourMove">Клопкніт на дощку, обы учинити ход ай доказати, ож исьте чоловік.</string>
   <string name="retry">Щи раз</string>
   <string name="follow">Подписати ся</string>
   <string name="block">Заблоковати</string>
@@ -158,6 +189,7 @@
   <string name="list">Ліста</string>
   <string name="graph">Ґрафік</string>
   <string name="winner">Побідник</string>
+  <string name="fewerPlayers">Кідь покладете условія, менше зможе бавити на турнірови.</string>
   <string name="join">Прикапчати ся</string>
   <string name="points">Балув</string>
   <string name="wins">Побід</string>
@@ -168,9 +200,11 @@
   <string name="isPrivate">Закрытый</string>
   <string name="profile">Профіл</string>
   <string name="lastName">Прозвище</string>
+  <string name="savingMovesHelp">Мы сокотиме ваші варіанты у кешови вашого браузера.</string>
   <string name="success">Успіх</string>
   <string name="puzzles">Задачі</string>
   <string name="name">Имня</string>
+  <string name="descPrivateHelp">Текст, котрый будут відїти лем участникы дружины. Кідь покладено, публічный опис помінят ся вшыткым участникам дружины.</string>
   <string name="no">Ньит</string>
   <string name="yes">Айно</string>
   <string name="help">Помоч:</string>
@@ -207,18 +241,35 @@
   <string name="learnMenu">Школованя</string>
   <string name="studyMenu">Штудія</string>
   <string name="tools">Інштрументы</string>
+  <string name="error.email_acceptable">Сись адрес почты не приятый. Перевірте щи раз, ай повторіт провбу.</string>
   <string name="menu">Меню</string>
   <string name="watch">Позирати</string>
   <string name="about">За сайт</string>
+  <string name="xIsAFreeYLibreOpenSourceChessServer">%1$s то задарный (%2$s), слободный, без рекламы, из одкрытым зачаточным кодом шахматный сервер.</string>
   <string name="really">ипен так</string>
   <string name="host">Зарядник</string>
+  <string name="aboutSimul">Сеансы ото коли єден бавляч бавит єдночасно из пару противниками.</string>
+  <string name="aboutSimulImage">Из 50 противникув, Фішер уграв 47, 2 ся кончили ремізов, ай 1 прыйграв.</string>
   <string name="aboutSimulRealLife">Концепт повторят прияту у живых шахматах, коли бавляч иде од стола до стола, бы учинити єден ход.</string>
+  <string name="aboutSimulRules">Коли сеанс зачинат ся, каждый бавляч бавит из орґанізатором. Сеанс ся кінчат, коли вшыткі добавлят.</string>
   <string name="create">Учинити</string>
+  <string name="simulClockHint">Штімованя годинкы Фішера. Чим булше бавлячув против вас, тым булше вам треба часу.</string>
+  <string name="simulAddExtraTime">Вы можете узяти щи си часу, бы обдумати ходы.</string>
+  <string name="tournamentHomeTitle">Шахматні турніры из другым контрольом часу ай варіантами</string>
   <string name="tournamentHomeDescription">Бавте у скорі шахматы на турнірах! Уберіт любый из офіціалных турнірув Лічесс вадь учиніт свуй. Булет, Бліц, Класіка, 960, Король у центрі, Тришахы тай повно другых штімовань для бесконечного шахматного радованя.</string>
+  <string name="tournamentMayHaveBeenCanceled">Турнір може быти одміненый, кідь вшыткі бавлячі лишили го перед стартом.</string>
+  <string name="weHaveSentYouAnEmailClickTheLink">Мы загнали письмо вам. Клопкніт на одкликованя бы актівовати акаунт.</string>
+  <string name="ifYouDoNotSeeTheEmailCheckOtherPlaces">Кідь нич не прийшло, перевірте фасціклы для спама, ай другі міста, де могло бы быти письмо.</string>
+  <string name="weHaveSentYouAnEmailTo">Мы загнали письмо по %s. Клопкніт на одкликованя бы зверичи паролу.</string>
+  <string name="receiveForumNotifications">Доставати увідоменя коли вас споминавут на форумови</string>
   <string name="kidModeExplanation">Се про безопасность. У дїтському режімови вшыткі комунікації выключені. Уключіт їх для своїх дїтий вадь студентув, обы защитити їх од другых інтернет хосновачув.</string>
+  <string name="inKidModeTheLichessLogoGetsIconX">У дїтському режімови од лоґо ся придає %s, бы сьте знали ож ваші дїти у безопасности.</string>
+  <string name="askYourChessTeacherAboutLiftingKidMode">Ваш акаунт корманованый. Попросіт выключити вашого учителя вам дїтськый режім.</string>
   <string name="lobby">Чекарня</string>
   <string name="light">Світлый</string>
   <string name="dark">Темный</string>
+  <string name="usernameAlreadyUsed">Сисе имня уже занято, попробуйте другоє.</string>
+  <string name="usernameCharsInvalid">Имня має мати лем ціфры, числа, подчеркув ай дефісув.</string>
   <string name="coaches">Тренеры</string>
   <string name="custom">Своя бавка</string>
   <string name="next">Дале</string>
@@ -226,15 +277,30 @@
   <string name="endgame">Ендшпіль</string>
   <string name="playX">Зограти %s</string>
   <string name="why">Зашто?</string>
+  <string name="pleasantChessExperience">Мы хочеме бы вшыткым было приятно бавити у шахматы.</string>
+  <string name="potentialProblem">Мы указуєме сю уповістку, коли видиме потенціалну проблему.</string>
+  <string name="tryToWin">Попробуйте уграти (ги мінімум, звести у ремізу) кажду свою бавку.</string>
+  <string name="resignLostGames">Здавайте ся у прыйграных позіціях (а не учікуйте кунця таймеру).</string>
+  <string name="agreementAssistance">Потверждаву, ож ниґда не захоснуву чужу помоч коли буду бавити у шахматы (из шахматных проґрам, книжок, баз даных тай од другых бавлячув).</string>
+  <string name="agreementNice">Потверждаву, ож буду из честованьом ся односити од другым бавлячам.</string>
+  <string name="agreementMultipleAccounts" comment="%s will be replaced with the translation of 'termsOfService'">Я согласный, не чинити повно акаунтув (кроме, трафункув описаных у %s).</string>
+  <string name="agreementPolicy">Я согласный, додїржовати вшыткі правила Lichess.</string>
   <string name="edit">Перемінити</string>
   <string name="rapid">Рапід</string>
+  <string name="thisTopicIsArchived">Ся тема у архівови, не мож ї булше коментовати.</string>
+  <string name="lostAgainstTOSViolator">Вы прыйграли, тому тко нарушив правила Lichess</string>
   <string name="lichessPatronInfo">Lichess - то незысковоє ай докус задарноє проґрамноє застаченя из одкрытым зачаточным кодом. 
 Вшыткі кельтункы, розробкы ай контент ся фінанзувут лем бо вы нас поддіржуєте.</string>
+  <string name="tournDescriptionHelp">Хочете дашто уповісти хосновачам? Будьте курті у свойих словах. Приступні одкликованя у форматови Markdown:[name](https://url)</string>
+  <string name="onlyTitledHelp">Мусай мати офіціалный шахматный статус бы бавити</string>
   <string name="positionInputHelp">Уведіт добрый шор FEN, обы кажда бавка ся зачинала из такої позіції.
 То фунґує лем про прості бавкы, а не варіанты.
 Вы можете хосновати %s для учиненя позіції FEN, а пак вписати ї туй. 
 Лишіт поле пустым, бы бавкы зачинали ся из простої позіції.</string>
+  <string name="simulFeaturedHelp">Указовати ваш сеанс на %s. Выключіт для личных сеансув.</string>
   <string name="noChat">Без чета</string>
+  <string name="closedAccountChangedMind">Кідь сьте закрыли свуй акаунт, а з того часу сьте передумали, є у вас лем єдна можность го вернути.</string>
+  <string name="cantDoThisTwice">Кідь другый раз закрыєте акаунт, уже го не вернете.</string>
   <string name="since">Из</string>
   <string name="until">До</string>
 </resources>
