--- a/translation/dest/site/uk-UA.xml
+++ b/translation/dest/site/uk-UA.xml
@@ -741,6 +741,7 @@
   <string name="simulAddExtraTime">Ви можете додати собі час, щоб упоратися з сеансом.</string>
   <string name="simulHostExtraTime">Додатковий час організатора</string>
   <string name="simulAddExtraTimePerPlayer">Додавайте початковий час до вашого годинника для кожного гравця, що приєднується до сеансу.</string>
+  <string name="simulHostExtraTimePerPlayer">Додатковий час для організатора за гравця</string>
   <string name="lichessTournaments">Турніри Lichess</string>
   <string name="tournamentFAQ">ЧаПи про турнір Арена</string>
   <string name="timeBeforeTournamentStarts">Час до початку турніру</string>
@@ -901,7 +902,7 @@
     <item quantity="other">%s секунд</item>
   </plurals>
   <string name="opening">Дебют</string>
-  <string name="middlegame">Міттельшпіль</string>
+  <string name="middlegame">Мітельшпіль</string>
   <string name="endgame">Ендшпіль</string>
   <string name="conditionalPremoves">Умовні ходи на випередження</string>
   <string name="addCurrentVariation">Додати поточний варіант</string>
@@ -1033,5 +1034,5 @@
   <string name="lichessDbExplanation">Рейтингові партії усiх гравців Lichess</string>
   <string name="switchSides">Змінити сторону</string>
   <string name="closingAccountWithdrawAppeal">Закриття облікового запису призведе до скасування вашої апеляції</string>
-  <string name="ourEventTips">Наші поради щодо організації подій</string>
+  <string name="ourEventTips" comment="ourEventTips&#10;&#10;A link that leads to https://lichess.org/page/event-tips&#10;&#10;That page describes best practices for events such as tournaments. It includes guidance on configuring the tournament, advertising it, and rules about prizes.">Наші поради щодо організації подій</string>
 </resources>
