--- a/translation/dest/oauthScope/sk-SK.xml
+++ b/translation/dest/oauthScope/sk-SK.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="newAccessToken">Nový osobný API prístupový token</string>
-  <string name="tokenGrantsPermission">Token umožňuje prístup na váš účet.</string>
-  <string name="carefullySelect">Dôkladne vyberte čo povolíte lebo to bude vo vašom mene.</string>
+  <string name="tokenGrantsPermission">Token udeľuje iným osobám povolenie používať Vaše konto.</string>
+  <string name="carefullySelect">Starostlivo vyberte čo povolíte vykonávať vo vašom mene!</string>
   <string name="tokenDescription">Popis tokenu</string>
-  <string name="rememberTokenUse">Takže si pamätajte, na čo slúži tento token</string>
+  <string name="rememberTokenUse">Aby ste si zapamätali na čo tento token slúži</string>
   <string name="whatTheTokenCanDo">Čo token môže urobiť v tvojom mene:</string>
-  <string name="doNotShareIt">Token umožňuje prístup k vášmu účtu. NEZDIEĽAJTE ho z nikým!</string>
-  <string name="copyTokenNow">Teraz si okopírujte alebo zapíšte token! Nebude možné aby ste ho videli znovu!</string>
+  <string name="doNotShareIt">Token umožňuje prístup k Vášmu účtu. NEZDIEĽAJTE ho s nikým!</string>
+  <string name="copyTokenNow">Nezabudnite si teraz skopírovať svoj nový osobný prístupový token! Už ho znova neuvidíte!</string>
   <string name="preferenceRead">Preferencie čítania</string>
   <string name="preferenceWrite">Napíšte preferencie</string>
   <string name="emailRead">Emailová adresa</string>
@@ -21,7 +21,7 @@
   <string name="puzzleRead">Čítať aktivitu v puzzle</string>
   <string name="teamRead">Čítať súkromné tímové informácie</string>
   <string name="teamWrite">Pripojiť sa k tímom alebo sa odpojiť</string>
-  <string name="teamLead">Spravujte tímy, ktoré vediete: posielajte PM, vyhadzovať členov</string>
+  <string name="teamLead">Spravujte tímy, ktoré vediete: posielajte súkromné správy, vyhadzujte členov</string>
   <string name="followRead">Čítať sledovaných hráčov</string>
   <string name="followWrite">Sledovať a predsledovať ostatných hráčov</string>
   <string name="msgWrite">Posielať súkromné správy ostatným hráčom</string>
