--- a/translation/dest/site/sk-SK.xml
+++ b/translation/dest/site/sk-SK.xml
@@ -238,22 +238,22 @@
   <string name="passwordSuggestion">Nepoužívajte heslo ktoré, vám dal niekto iný. Mohol by vám ukradnúť účet.</string>
   <string name="emailSuggestion">Nepoužívajte e-mail, ktorý, vám dal niekto iný. Mohol by vám ukradnúť účet.</string>
   <string name="emailConfirmHelp">Pomoc s overením e-mailu</string>
-  <string name="emailConfirmNotReceived">Nedostali ste váš konfirmačný email po registrácii?</string>
-  <string name="whatSignupUsername">Aké používateľske meno ste použili pri registrácii?</string>
+  <string name="emailConfirmNotReceived">Nedostali ste Váš overovací email po registrácii?</string>
+  <string name="whatSignupUsername">Aké používateľské meno ste použili na registráciu?</string>
   <string name="usernameNotFound">Nepodarilo sa nám nájsť používateľa s týmto menom: %s.</string>
-  <string name="usernameCanBeUsedForNewAccount">Môžte použiť toto meno pre registráciu</string>
-  <string name="emailSent">Poslali sme vám e-mail na adresu %s.</string>
-  <string name="emailCanTakeSomeTime">Bude to trvať nejaký čas kým to príde.</string>
-  <string name="refreshInboxAfterFiveMinutes">Vyčkajte 5 minút a obnovte vašu mailovú schránku.</string>
-  <string name="checkSpamFolder">Prosím skontrolujte tiež priečinok so spamom či tam nieje. Ak je označte ho, že nieje spam.</string>
-  <string name="emailForSignupHelp">Ak zlyhá všetko ostatné, zašlite nám tento email:</string>
-  <string name="copyTextToEmail">Skopírujte a prilepte vyššie uvedený text a pošlite ho na %s</string>
-  <string name="waitForSignupHelp">Čoskoro sa vám ozveme, aby sme vám pomohli dokončiť registráciu.</string>
+  <string name="usernameCanBeUsedForNewAccount">Toto meno je možné na vytvorenie nového účtu použiť</string>
+  <string name="emailSent">Na adresu %s sme poslali email.</string>
+  <string name="emailCanTakeSomeTime">Môže chvíľu trvať kým príde.</string>
+  <string name="refreshInboxAfterFiveMinutes">Počkajte 5 minút a obnovte si emailovú schránku!</string>
+  <string name="checkSpamFolder">Skontrolujte si aj priečinok s nevyžiadanou poštou, je možné, že sa dostal tam. Ak sa tak stalo, zrušte označenie emailu ako nevyžiadanej pošty.</string>
+  <string name="emailForSignupHelp">Ak všetko ostatné zlyhá, pošlite nám tento email:</string>
+  <string name="copyTextToEmail">Skopírujte a vložte uvedený text a pošlite ho na adresu %s</string>
+  <string name="waitForSignupHelp">Čoskoro sa Vám ozveme, aby sme Vám pomohli dokončiť registráciu.</string>
   <string name="accountConfirmed">Používateľ %s je úspešne potvrdený.</string>
   <string name="accountCanLogin">Teraz sa môžete prihlásiť ako %s.</string>
-  <string name="accountConfirmationEmailNotNeeded">Nové heslo vám bolo odoslané.</string>
+  <string name="accountConfirmationEmailNotNeeded">Potvrdzovací e-mail nepotrebujete.</string>
   <string name="accountClosed">Účet %s je zrušený.</string>
-  <string name="accountRegisteredWithoutEmail">Účet %s bol zaregistrovaný bez mailovej adresy.</string>
+  <string name="accountRegisteredWithoutEmail">Účet %s bol zaregistrovaný bez emailovej adresy.</string>
   <string name="rank">Poradie</string>
   <string name="rankX">Poradie: %s</string>
   <plurals name="rankIsUpdatedEveryNbMinutes">
@@ -857,7 +857,7 @@
   <string name="bestWasX">Najlepší ťah bol %s</string>
   <string name="youBrowsedAway">Precvičovanie prerušené</string>
   <string name="resumePractice">Pokračovať v precvičovaní</string>
-  <string name="drawByFiftyMoves">Hra bola ukončená remízou podľa pravidla 50 ťahov.</string>
+  <string name="drawByFiftyMoves">Partia bola ukončená remízou podľa pravidla 50 ťahov.</string>
   <string name="theGameIsADraw">Hra skončila remízou.</string>
   <string name="computerThinking">Počítač premýšľa...</string>
   <string name="seeBestMove">Ukázať najlepší ťah</string>
