New Crowdin updates (#12729)
* New translations: storm.xml (Galician)

* New translations: storm.xml (Galician)

* New translations: puzzle.xml (Dutch)

* New translations: preferences.xml (Slovenian)

* New translations: preferences.xml (Slovenian)

* New translations: site.xml (Swedish)

* New translations: ublog.xml (Esperanto)

* New translations: ublog.xml (Esperanto)

* New translations: puzzle.xml (Esperanto)

* New translations: challenge.xml (Esperanto)

* New translations: ublog.xml (Esperanto)

* New translations: puzzle.xml (Esperanto)

* New translations: coordinates.xml (Esperanto)

* New translations: perfStat.xml (Esperanto)

* New translations: search.xml (Esperanto)

--- a/translation/dest/storm/gl-ES.xml
+++ b/translation/dest/storm/gl-ES.xml
@@ -2,7 +2,7 @@
 <resources>
   <string name="moveToStart">Move para comezar</string>
   <string name="youPlayTheWhitePiecesInAllPuzzles">Xogas coas pezas brancas en todos os crebacabezas</string>
-  <string name="youPlayTheBlackPiecesInAllPuzzles">Xogas as negras en todos os crebacabezas</string>
+  <string name="youPlayTheBlackPiecesInAllPuzzles">Xogas coas pezas negras en todos os crebacabezas</string>
   <string name="puzzlesSolved">crebacabezas resoltos</string>
   <string name="newDailyHighscore">Novo récord diario!</string>
   <string name="newWeeklyHighscore">Novo récord semanal!</string>
@@ -27,24 +27,24 @@
   <string name="timePerMove">Tempo por movemento</string>
   <string name="highestSolved">Exercicio máis difícil resolto</string>
   <string name="puzzlesPlayed">Crebacabezas xogados</string>
-  <string name="newRun">Nova ronda (tecla: espacio)</string>
-  <string name="endRun">Finalizar ronda (tecla: enter)</string>
+  <string name="newRun">Nova ronda (tecla: espazo)</string>
+  <string name="endRun">Finalizar ronda (tecla: Intro)</string>
   <string name="highscores">Récords</string>
   <string name="viewBestRuns">Ver as mellores rondas</string>
   <string name="bestRunOfDay">Mellor ronda do día</string>
   <string name="runs">Rondas</string>
   <string name="getReady">Prepárate!</string>
-  <string name="waitingForMorePlayers">Agardando a máis xogardores entraren...</string>
-  <string name="raceComplete">Corrida concluída!</string>
+  <string name="waitingForMorePlayers">Agardando que se unan máis xogadores...</string>
+  <string name="raceComplete">Carreira concluída!</string>
   <string name="spectating">Observando</string>
   <string name="joinTheRace">Entra na carreira!</string>
   <string name="startTheRace">Comeza a carreira</string>
   <string name="yourRankX">A túa clasificación: %s</string>
-  <string name="waitForRematch">Espera para o desquite</string>
-  <string name="nextRace">Próxima corrida</string>
+  <string name="waitForRematch">Agardando polo desquite</string>
+  <string name="nextRace">Próxima carreira</string>
   <string name="joinRematch">Unirse ao desquite</string>
   <string name="waitingToStart">Esperando a que comece</string>
-  <string name="createNewGame">Crea unha nova partida</string>
+  <string name="createNewGame">Crea unha nova carreira</string>
   <string name="joinPublicRace">Únete a unha carreira pública</string>
   <string name="raceYourFriends">Corre contra os teus amigos</string>
   <string name="skip">omitir</string>
