--- a/translation/dest/ublog/eo-UY.xml
+++ b/translation/dest/ublog/eo-UY.xml
@@ -1,2 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+  <string name="xBlog">Blogo de %s</string>
+  <string name="newPost">Nova afiŝo</string>
+  <string name="editYourBlogPost">Redakti vian blogafiŝon</string>
+  <string name="saveDraft">Konservi malneton</string>
+  <string name="postTitle">Afiŝa titolo</string>
+  <string name="postIntro">Afiŝa enkonduko</string>
+  <string name="postBody">Afiŝa enhavo</string>
+  <string name="drafts">Malnetoj</string>
+  <string name="published">Eldonita</string>
+  <string name="createBlogDiscussion">Ebligi komentojn</string>
+  <plurals name="nbViews">
+    <item quantity="one">Unu vido</item>
+    <item quantity="other">%s vidoj</item>
+  </plurals>
+  <string name="xPublishedY">%1$s eldonis %2$s</string>
+  <string name="thisPostIsPublished">Tiu afiŝo estas eldonita</string>
+  <string name="thisIsADraft">Tiu estas malneto</string>
+  <string name="latestBlogPosts">Plej novaj blogafiŝoj</string>
+  <string name="imageAlt">Alternativa teksto de bildo</string>
+  <string name="deleteImage">Forigi la bildon</string>
+</resources>
